# openwars

./: .coderabbit.yaml  .gitignore  Cargo.toml  GEMINI.md  final_cleanup.py  fix_comments.py  fix_comments_hardcode.py  fix_distance_to_turns.py  fix_distance_to_turns_real.py  fix_distance_to_turns_real2.py  fix_infantry_scores.py  fix_types.py  modify_engine.py  modify_missions_step1.py  modify_missions_step2.py  modify_planner.py  package.json  patch_cli_app.sh  pnpm-lock.yaml  recommend_action.py  test.rs  update_constants.py
.github/workflows/: rust-check.yml  rust.yml
.rulesync/rules/: project.md
.rulesync/skills/ai-cli-debugger/: SKILL.md
.rulesync/skills/cli-ncurses-builder/: SKILL.md
.rulesync/skills/code-review/: SKILL.md
.rulesync/skills/fix-pr-comments/: SKILL.md
.rulesync/skills/git-smart-merge/: SKILL.md
.rulesync/skills/jules-integration/: SKILL.md
.rulesync/skills/openwars-interactive-advisor/: SKILL.md  recommend_action.py
.rulesync/skills/openwars-mcp-ai-eval/: SKILL.md
.rulesync/skills/skill-creator/: SKILL.md
cli/: Cargo.toml
cli/src/: app.rs  main.rs  ui.rs
core/: Cargo.toml
core/src/components/: map.rs  mod.rs  unit.rs
core/src/events/: mod.rs
core/src/resources/: mod.rs
core/src/systems/: combat.rs  mod.rs  (+6 more)
docs/architecture/: ai_design.md
engine/: Cargo.toml  build.rs
engine/src/: lib.rs  setup.rs
mcp-server/: Cargo.toml
mcp-server/src/: main.rs  main.rs.orig
openspec/: config.yaml  project.md
scratch/: recommendations.json
src/domain/: game_state.rs  map_grid.rs  mod.rs  movement.rs  unit_roster.rs
(+210 files in other folders)
