[package]
name = "mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { version = "0.1.0", path = "../engine" }
rmcp = { version = "0.1.0", features = ["transport-io"] }
schemars = "0.8.21"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
