[package]
name = "mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = "0.15.2"
engine = { version = "0.1.0", path = "../engine" }
rmcp = { version = "1.6.0", features = ["transport-io", "macros", "server"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
uuid = { version = "1.12.0", features = ["v4"] }
[[bin]]
name = "mcp-server"
path = "src/main.rs"

